--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1343,7 +1343,14 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgba(228, 228, 231, var(--tw-bg-opacity));
 }
-
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
+.bg-green-500{
+  --tw-bg-opacity: 1;
+  background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+}
 .bg-blueGray-50 {
   --tw-bg-opacity: 1;
   background-color: rgba(248, 250, 252, var(--tw-bg-opacity));
@@ -2203,7 +2210,19 @@ select {
 .list-inside {
   list-style-position: inside;
 }
+.text-blue-600	{
+  --tw-text-opacity: 1;
+  color: rgba(37, 99, 235, var(--tw-text-opacity));
+}
 
+.text-blue-700	{
+  --tw-text-opacity: 1;
+  color: rgba(29, 78, 216, var(--tw-text-opacity));
+}
+.text-blue-800	{
+  --tw-text-opacity: 1;
+  color: rgba(30, 64, 175, var(--tw-text-opacity));
+}
 .list-outside {
   list-style-position: outside;
 }
@@ -3549,6 +3568,33 @@ select {
   width: 50%;
 }
 
+.w-1\/2	{width: 50%};
+.w-1\/3	{width: 33.333333%;}
+.w-2\/3	{width: 66.666667%;}
+.w-1\/4	{width: 25%;}
+.w-2\/4	{width: 50%;}
+.w-3\/4	{width: 75%;}
+.w-1\/5	{width: 20%;}
+.w-2\/5	{width: 40%;}
+.w-3\/5	{width: 60%;}
+.w-4\/5	{width: 80%;}
+.w-1\/6	{width: 16.666667%;}
+.w-2\/6	{width: 33.333333%;}
+.w-3\/6	{width: 50%;}
+.w-4\/6	{width: 66.666667%;}
+.w-5\/6	{width: 83.333333%;}
+.w-1\/12	{width: 8.333333%;}
+.w-2\/12	{width: 16.666667%;}
+.w-3\/12	{width: 25%;}
+.w-4\/12	{width: 33.333333%;}
+.w-5\/12	{width: 41.666667%;}
+.w-6\/12	{width: 50%;}
+.w-7\/12	{width: 58.333333%;}
+.w-8\/12	{width: 66.666667%;}
+.w-9\/12	{width: 75%;}
+.w-10\/12	{width: 83.333333%;}
+.w-11\/12	{width: 91.666667%;}
+
 .w-6\/12 {
   width: 50%;
 }
@@ -4153,6 +4199,7 @@ select {
   .xl\:w-8\/12 {
     width: 66.666667%;
   }
+  
 }
 
 @media (min-width: 1536px) {
